cmake_minimum_required(VERSION 3.10)
project(cpp_projects)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

add_executable(cpp_projects
        main.cpp
        src/Alg1.cpp
        src/Alg3.cpp
        src/Alg4.cpp
        src/Calcul-data-nastere.cpp
        src/DobandaAnuala.cpp
        src/Integer-to-roman-numbers.cpp
        src/Interschimbarea-2-variabile.cpp
        src/Reuniune.cpp
        src/SumaVector.cpp
        src/Diferenta-timp.cpp
        src/alg6.cpp
        src/Alg5.cpp
        src/Nr-prim.cpp
        src/Alg7.cpp
        src/Alg8.cpp
        src/Alg9.cpp
        src/Distance-of-2-points.cpp
        src/Alg10.cpp
        src/Alg11.cpp
        src/Alg12.cpp
        src/Alg13.cpp
        src/Alg14.cpp
        src/Alg15.cpp
        src/Alg16.cpp
        src/Alg17.cpp
        src/BinarySearch.cpp
        src/MergeSort.cpp
        src/Max-and-min.cpp
        src/Max-min-v2.cpp
        src/Min-Max-Per.cpp
        src/QuickSort.cpp
        src/OOP/Class-Log.cpp
        src/OOP/Class-Constrc-Destruct.cpp
        src/OOP/Methods-Inheritage.cpp
        src/OOP/Class-Virtual.cpp
        "src/cmmdc .cpp"
        src/Recursive-print-vector.cpp
        src/Recursive-sum.cpp
        src/OOP/Constructor-copiere.cpp
        src/OOP/Clasa-Cerc.cpp
        src/Produs.cpp
        src/OOP/Fractie.cpp
        src/OOP/Adunare-fractii.cpp
        src/OOP/Puncte.cpp
        src/OOP/User.cpp
        src/OOP/Vector.cpp
        src/OOP/Vector2.cpp
        src/OOP/Matrice.cpp
        "src/OOP/Class Vector.cpp"
        src/OOP/Fractie1.cpp
        src/OOP/Operator-overloading.cpp
        src/OOP/Database.cpp
        src/OOP/Fractie2.cpp
        src/OOP/Operator+-suprascriere.cpp
        src/OOP/Complex.cpp
        src/OOP/Clasa_ex.cpp
        src/OOP/Class-Inheritage.cpp
        src/OOP/Laturi.cpp
        src/hei/print.cpp
        src/hei/print.h
        src/OOP/Figuri-geometrice/Latura.cpp
        src/OOP/Figuri-geometrice/Latura.h
        src/OOP/Figuri-geometrice/Figura.cpp
        src/OOP/Figuri-geometrice/Figura.h
        src/OOP/Figuri-geometrice/Triunghi.cpp
        src/OOP/Figuri-geometrice/Triunghi.h
        src/OOP/Figuri-geometrice/Patrat.h
        src/OOP/Figuri-geometrice/Patrat.cpp
        src/OOP/Figuri-geometrice/main.cpp
        src/hei/printable.cpp
        src/Alg18.cpp
        src/OOP/Polimorfism-ClasaMagazin.cpp
)

#add_executable(FiguriGeometrice
#        main.cpp
#       Figura.cpp
#        Latura.cpp
#        Patrat.cpp
#        Triunghi.cpp
#)
